wrong files commited

--- a/index.html
+++ b/index.html
@@ -1,42 +1,27 @@
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <!--====== Title ======-->
-    <title>Smash - Bootstrap Business Template</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
-    <!--====== Magnific Popup CSS ======-->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Company EuropeGroup Test</title>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet" />
+    <script src="app.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+<div id="app">
+    <section id="user-list">
 
-    <!--====== Slick CSS ======-->
-    <link rel="stylesheet" href="assets/css/slick.css">
+        <span id="status"></span>
 
-    <!--====== Line Icons CSS ======-->
-    <link rel="stylesheet" href="assets/css/LineIcons.css">
+        <h2>Users</h2>
 
-    <!--====== Bootstrap CSS ======-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <span id="error-message"></span>
 
-    <!--====== Default CSS ======-->
-    <link rel="stylesheet" href="assets/css/default.css">
+        <ul id="card-container"></ul>
 
-    <!--====== Style CSS ======-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    </section>
 
+</div>
 
-
-    <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
-        <ul class="navbar-nav m-auto">
-            <li class="nav-item active"><a class="page-scroll" href="#home">home</a></li>
-            <li class="nav-item"><a class="page-scroll" href="#services">Services</a></li>
-            <li class="nav-item"><a class="page-scroll" href="#portfolio">Portfolio</a></li>
-            <li class="nav-item"><a class="page-scroll" href="#pricing">Pricing</a></li>
-            <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-            <li class="nav-item"><a class="page-scroll" href="#team">Team</a></li>
-            <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
-        </ul>
-    </div>
+</html>
